Update code, fix bug

--- a/NewSalesProject/App.config
+++ b/NewSalesProject/App.config
@@ -57,6 +57,9 @@
       <setting name="AssetDtGridProperties" serializeAs="String">
         <value>Default</value>
       </setting>
+      <setting name="GoodsReceiptDtGridProperties" serializeAs="String">
+        <value>Default</value>
+      </setting>
     </NewSalesProject.Properties.Settings>
   </userSettings>
 </configuration>
