Update mới nhất

--- a/NewSalesProject/NewSalesProject.csproj
+++ b/NewSalesProject/NewSalesProject.csproj
@@ -513,6 +513,8 @@
   <ItemGroup>
     <Resource Include="Images\DeleteAll.ico" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\seiyu.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
