Update to FrameworkVersion 4.8 and fix for app not running

--- a/NewSalesProject/App.config
+++ b/NewSalesProject/App.config
@@ -17,7 +17,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="SalesContextString" connectionString="data source=(LocalDB)\MSSQLLocalDB;initial catalog=NewSalesProject.Models.SalesContext;AttachDbFilename=&quot;E:\MySaleProject\SalesSystemDatabase.mdf&quot;;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="SalesContextString" connectionString="data source=(LocalDB)\MSSQLLocalDB;initial catalog=NewSalesProject.Models.SalesContext;AttachDbFilename=&quot;C:\temp\SalesSystemDatabase.mdf&quot;;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <userSettings>
     <NewSalesProject.Properties.Settings>
